# epr-app

./: .env.example  pyproject.toml
app/: main.py
typings/eopr/: __init__.pyi  errors.pyi
typings/eopr/core/indicators/: common.pyi  macd.pyi  rsi.pyi
typings/eopr/core/strategies/: macd_rsi_crossover.pyi
typings/eopr/utils/: candle_parser.pyi
typings/websocket/: _abnf.pyi  _app.pyi  _cookiejar.pyi  _core.pyi  _socket.pyi  _url.pyi  _utils.pyi
